--- a/public/css/app.css
+++ b/public/css/app.css
@@ -791,10 +791,10 @@ select {
 .prose ol[type="a"] {
 	--list-counter-style: lower-alpha;
 }
-.prose ol[type="A" s] {
+.prose ol[type="A"] {
 	--list-counter-style: upper-alpha;
 }
-.prose ol[type="a" s] {
+.prose ol[type="a" ] {
 	--list-counter-style: lower-alpha;
 }
 .prose ol[type="I"] {
@@ -803,10 +803,10 @@ select {
 .prose ol[type="i"] {
 	--list-counter-style: lower-roman;
 }
-.prose ol[type="I" s] {
+.prose ol[type="I"] {
 	--list-counter-style: upper-roman;
 }
-.prose ol[type="i" s] {
+.prose ol[type="i"] {
 	--list-counter-style: lower-roman;
 }
 .prose ol[type="1"] {
@@ -1456,11 +1456,10 @@ select {
 	border-color: rgba(243, 244, 246, var(--tw-border-opacity));
 }
 .bg-white {
-	--tw-bg-opacity: 1;
-	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+	--tw-bg-opacity: 0.6;
+	background-color: rgba(55,69,84, var(--tw-bg-opacity));
 }
 .bg-gray-100 {
-	--tw-bg-opacity: 1;
 	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
 }
 .bg-indigo-500 {
