--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -251,7 +251,7 @@ button, a {
   color: var(--link-color-active);
 }
 .app-sidebar-link.active {
-  background-color: var(--link-color-active-bg);
+  background-color: #d1d1d1;
   color: var(--link-color-active);
 }
 
@@ -260,7 +260,7 @@ button, a {
   background-color: var(--projects-section);
   border-radius: 32px;
   padding: 32px 32px 0 32px;
-  overflow: hidden;
+  overflow-x: scroll;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -269,7 +269,7 @@ button, a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 32px;
+  padding-bottom: 0px;
 }
 .projects-section-header {
   display: flex;
