--- a/resources/css/admin.css
+++ b/resources/css/admin.css
@@ -11,7 +11,7 @@
   --link-color: #1f1c2e;
   --link-color-hover: #c3cff4;
   --link-color-active: #fff;
-  --link-color-active-bg: #1f1c2e;
+  --link-color-active-bg: #b3b2b8;
   --projects-section: #fff;
   --message-box-hover: #fafcff;
   --message-box-border: #e9ebf0;
@@ -32,7 +32,7 @@
   --projects-section: #1f2937;
   --link-color: rgba(255,255,255,.8);
   --link-color-hover: rgba(195, 207, 244, 0.1);
-  --link-color-active-bg: rgba(195, 207, 244, 0.2);
+  --link-color-active-bg: rgba(221, 221, 221, 0.2);
   --button-bg: #1f2937;
   --search-area-bg: #1f2937;
   --message-box-hover: #243244;
@@ -251,8 +251,8 @@ button, a {
   color: var(--link-color-active);
 }
 .app-sidebar-link.active {
-  background-color: var(--link-color-active-bg);
-  color: var(--link-color-active);
+  background-color:#d1d1d1;
+  color: #d1d1d1;
 }
 
 .projects-section {
@@ -269,7 +269,7 @@ button, a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 32px;
+
 }
 .projects-section-header {
   display: flex;
