--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -318,6 +318,20 @@ button, a {
   color: var(--main-color);
 }
 
+.status-email {
+  font-size: 20px;
+  line-height: 32px;
+  font-weight: 450;
+  color: var(--main-color);
+}
+
+.status-faculty {
+  font-size: 18px;
+  line-height: 32px;
+  font-weight: 400;
+  color: var(--main-color);
+}
+
 .status-type {
   position: relative;
   padding-right: 24px;
@@ -328,6 +342,7 @@ button, a {
   display: flex;
   align-items: center;
 }
+
 
 .view-btn {
   width: 36px;
