--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -262,7 +262,7 @@ button, a {
   border-radius: 32px;
   padding: 32px 32px 0 32px;
   overflow-x:hidden;
-  overflow-y: hidden;
+  overflow-y: auto;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -572,7 +572,6 @@ button, a {
 }
 .project-box-content-header {
   text-align: center;
-  margin-bottom: 16px;
 }
 .project-box-content-header p {
   margin: 0;
